# test2

./: app.py  entrypoint.sh  index.js  main.py  new_animes.json  package.json  pyproject.toml  run.py  start_flask.sh
attached_assets/: Pasted--voicie-les-fichier-de-mon-site-git-clone-https-github-com-therealskyline-final-webstreaming-de-1746566889879.txt
instance/: anime.db
realweb/API/: README.md  anime1.py  config.toml
realweb/API/anime_sama_api/: README.md  TODO.md  __init__.py  __main__.py  catalogue.py  catalogue_data.py  config.py  config.toml  downloader.py  episode.py  episode_data.py  error_handeling.py  for_debugging.py  internal_player.py  langs.py  play_menu.py  pyproject.toml  season.py  season_data.py  test_catalogue.py  test_cli_utils.py  test_download.py  test_seasons.py  test_top_level.py  test_utils.py  top_level.py  utils.py
realweb/API/anime_sama_api/cli/: __init__.py  __main__.py  config.py  config.toml  downloader.py  internal_player.py  langs.py  play_menu.py  utils.py
realweb/API/attached_assets/: Pasted-025-05-03-18-47-45-425-ERROR-ERROR-generic-Unable-to-download-webpage-HTTP-Error-403-Forbid-1746298081344.txt  Pasted-5-Solo-Login-6-Solo-Necromancy-7-Solo-Spell-Caster-8-Worn-and-Torn-Newbie-Choi-1746303343900.txt  Pasted-D-marrage-du-t-l-chargement-Downloaded--1746295562928.txt  Pasted-D-marrage-du-t-l-chargement-Downloaded--1746296017869.txt  Pasted-D-marrage-du-t-l-chargement-Downloaded--1746299651072.txt  Pasted-Downloaded-0-1-2025-05-03-18-34-39-1746297314208.txt  Pasted-import-time-import-logging-from-concurrent-futures-import-ThreadPoolExecutor-from-pathlib-import--1746297795907.txt  requirements.txt  vidmoly.me_cookies (1).txt
realweb/final_website/: app.py
static/data/: anime.json
