[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anime-sama_api"
version = "0.1.2-1"
description = "Api for anime-sama.fr"
authors = [
    {name = "NiniKo", email = "pcninik@gmail.com"}
]
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
keywords = ["anime-sama", "anime", "downloader"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Multimedia :: Video :: Capture",
    "Topic :: System :: Archiving",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
]

[project.scripts]
anime-sama = "anime_sama_api:main"

[project.urls]
Repository = "https://github.com/Sky-NiniKo/anime-sama_downloader/"

[project.optional-dependencies]
cli = [
    "rich>=13.9.4",
    "tomli>=2.2.1 ; python_full_version < '3.11'",
    "yt-dlp>=2025.2.19",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=1.15.0",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "pytest-cov>=6.0.0",
    "yt-dlp-types>=0.0.14",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "module"
